// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Element Audio-Video component Testing Element  component with props render Element component  1`] = `
<ElementAudioVideo
  model={[Function]}
  type="figure"
>
  <div
    className="figureElement"
  />
</ElementAudioVideo>
`;

exports[`Testing Element Audio-Video component With Audio element renders  properly with default audio Alfresco-type element 1`] = `
<ElementAudioVideo
  index={3}
  model={
    Object {
      "alignment": "full",
      "captions": Object {
        "footnotes": Array [],
        "mathml": Array [],
        "schema": "http://schemas.pearson.com/wip-authoring/authoredtext/1#/definitions/authoredtext",
        "text": "",
        "textsemantics": Array [],
      },
      "comments": true,
      "contentUrn": "urn:pearson:entity:b8c31acf-2c66-4a05-92ac-e0d910ec2720",
      "credits": Object {
        "footnotes": Array [],
        "mathml": Array [],
        "schema": "http://schemas.pearson.com/wip-authoring/authoredtext/1#/definitions/authoredtext",
        "text": "",
        "textsemantics": Array [],
      },
      "figuredata": Object {
        "audio": Object {
          "format": "audio/mpeg",
          "path": "",
        },
        "audioid": "urn:pearson:alfresco:f6269c36-bff5-46e0-ba2f-de9f4f172002",
        "height": "399",
        "posterimage": Object {
          "imageid": "urn:pearson:alfresco:f6269c36-bff5-46e0-ba2f-de9f4f172002",
          "path": "https://cite-media-stg.pearson.com/legacy_paths/af7f2e5c-1b0c-4943-a0e6-bd5e63d52115/FPO-audio_video.png",
        },
        "schema": "http://schemas.pearson.com/wip-authoring/audio/1#/definitions/audio",
        "srctype": "internal",
        "width": "600",
      },
      "figuretype": "audio",
      "html": Object {
        "caption": "sdafsad",
        "credit": "asdfasdfasdf",
        "postertext": "",
        "schema": "http://schemas.pearson.com/wip-authoring/authoredtext/1#/definitions/authoredtext",
        "subtitle": "eresrwqe",
        "tableasHTML": "",
        "title": "12345",
      },
      "id": "urn:pearson:work:f20316ad-0a22-4f45-975d-ebe4ba1f2564",
      "schema": "http://schemas.pearson.com/wip-authoring/figure/1",
      "subtitle": Object {
        "footnotes": Array [],
        "mathml": Array [],
        "schema": "http://schemas.pearson.com/wip-authoring/authoredtext/1#/definitions/authoredtext",
        "text": "",
        "textsemantics": Array [],
      },
      "subtype": "figureAudio",
      "tcm": true,
      "title": Object {
        "mathml": Array [],
        "schema": "http://schemas.pearson.com/wip-authoring/authoredtext/1#/definitions/authoredtext",
        "text": "",
        "textsemantics": Array [],
      },
      "type": "figure",
      "versionUrn": "urn:pearson:work:f20316ad-0a22-4f45-975d-ebe4ba1f2564",
    }
  }
>
  <div
    className="figureElement"
  >
    <div
      className="divAudio"
    >
      <figure
        className="figureAudio"
      >
        <header
          className="figureHeader"
        >
          <TinyMceEditor
            className="heading4AudioNumberLabel figureLabel "
            error={null}
            index="3-0"
            model="12345"
            onClick={[Function]}
            onKeyup={[Function]}
            placeholder="Enter Label..."
            tagName="h4"
          >
            <h4
              className="heading4AudioNumberLabel figureLabel  cypress-editable"
              contentEditable="true"
              id="cypress-3-0"
              onBlur={[Function]}
              onFocus={[Function]}
              placeholder="Enter Label..."
              suppressContentEditableWarning={true}
            >
              12345
            </h4>
          </TinyMceEditor>
          <TinyMceEditor
            className="heading4AudioTitle figureTitle"
            error={null}
            index="3-1"
            model="eresrwqe"
            onClick={[Function]}
            onKeyup={[Function]}
            placeholder="Enter Title..."
            tagName="h4"
          >
            <h4
              className="heading4AudioTitle figureTitle cypress-editable"
              contentEditable="true"
              id="cypress-3-1"
              onBlur={[Function]}
              onFocus={[Function]}
              placeholder="Enter Title..."
              suppressContentEditableWarning={true}
            >
              eresrwqe
            </h4>
          </TinyMceEditor>
        </header>
        <div
          className="assetDiv"
        >
          <strong>
            Asset: 
          </strong>
          Asset data undefined
        </div>
        <div
          className="pearson-component audio"
          data-type="audio"
        >
          <audio
            className="audio"
            controls="none"
            preload="none"
          >
            <source
              src=""
              type="audio/mpeg"
            />
          </audio>
        </div>
        <figcaption
          className="figcaptionAudio"
        >
          <TinyMceEditor
            className="figureCaption"
            error={null}
            index="3-2"
            model="sdafsad"
            onClick={[Function]}
            onKeyup={[Function]}
            placeholder="Enter Caption..."
            tagName="p"
          >
            <p
              className="figureCaption cypress-editable"
              contentEditable="true"
              id="cypress-3-2"
              onBlur={[Function]}
              onFocus={[Function]}
              placeholder="Enter Caption..."
              suppressContentEditableWarning={true}
            >
              sdafsad
            </p>
          </TinyMceEditor>
        </figcaption>
      </figure>
      <div>
        <TinyMceEditor
          className="paragraphAudioCredit figureCredit"
          error={null}
          index="3-3"
          model="asdfasdfasdf"
          onClick={[Function]}
          onKeyup={[Function]}
          placeholder="Enter Credit..."
          tagName="p"
        >
          <p
            className="paragraphAudioCredit figureCredit cypress-editable"
            contentEditable="true"
            id="cypress-3-3"
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="Enter Credit..."
            suppressContentEditableWarning={true}
          >
            asdfasdfasdf
          </p>
        </TinyMceEditor>
      </div>
    </div>
  </div>
</ElementAudioVideo>
`;

exports[`Testing Element Audio-Video component With Audio element renders  properly with given audio Alfresco-type element 1`] = `
<ElementAudioVideo
  index={4}
  model={
    Object {
      "alignment": "full",
      "captions": Object {
        "footnotes": Array [],
        "mathml": Array [],
        "schema": "http://schemas.pearson.com/wip-authoring/authoredtext/1#/definitions/authoredtext",
        "text": "",
        "textsemantics": Array [],
      },
      "comments": true,
      "contentUrn": "urn:pearson:entity:b8c31acf-2c66-4a05-92ac-e0d910ec2720",
      "credits": Object {
        "footnotes": Array [],
        "mathml": Array [],
        "schema": "http://schemas.pearson.com/wip-authoring/authoredtext/1#/definitions/authoredtext",
        "text": "",
        "textsemantics": Array [],
      },
      "figuredata": Object {
        "audio": Object {
          "format": "audio/mpeg",
          "path": "https://cite-media-stg.pearson.com/legacy_paths/5e7f87f1-4662-4093-bb10-f3e1ef66e658/smart_figure_3_6_mc_war_part_b_1025689155684_mp4_video_320x240_168000_primary_audio_1.mp4",
        },
        "audioid": "urn:pearson:alfresco:f6269c36-bff5-46e0-ba2f-de9f4f172002",
        "height": "399",
        "posterimage": Object {
          "imageid": "urn:pearson:alfresco:f6269c36-bff5-46e0-ba2f-de9f4f172002",
          "path": "https://cite-media-stg.pearson.com/legacy_paths/af7f2e5c-1b0c-4943-a0e6-bd5e63d52115/FPO-audio_video.png",
        },
        "schema": "http://schemas.pearson.com/wip-authoring/audio/1#/definitions/audio",
        "srctype": "internal",
        "width": "600",
      },
      "figuretype": "audio",
      "html": Object {
        "caption": "sdafsad",
        "credit": "asdfasdfasdf",
        "postertext": "",
        "schema": "http://schemas.pearson.com/wip-authoring/authoredtext/1#/definitions/authoredtext",
        "subtitle": "eresrwqe",
        "tableasHTML": "",
        "title": "12345",
      },
      "id": "urn:pearson:work:f20316ad-0a22-4f45-975d-ebe4ba1f2564",
      "schema": "http://schemas.pearson.com/wip-authoring/figure/1",
      "subtitle": Object {
        "footnotes": Array [],
        "mathml": Array [],
        "schema": "http://schemas.pearson.com/wip-authoring/authoredtext/1#/definitions/authoredtext",
        "text": "",
        "textsemantics": Array [],
      },
      "subtype": "figureAudio",
      "tcm": true,
      "title": Object {
        "mathml": Array [],
        "schema": "http://schemas.pearson.com/wip-authoring/authoredtext/1#/definitions/authoredtext",
        "text": "",
        "textsemantics": Array [],
      },
      "type": "figure",
      "versionUrn": "urn:pearson:work:f20316ad-0a22-4f45-975d-ebe4ba1f2564",
    }
  }
>
  <div
    className="figureElement"
  >
    <div
      className="divAudio"
    >
      <figure
        className="figureAudio"
      >
        <header
          className="figureHeader"
        >
          <TinyMceEditor
            className="heading4AudioNumberLabel figureLabel "
            error={null}
            index="4-0"
            model="12345"
            onClick={[Function]}
            onKeyup={[Function]}
            placeholder="Enter Label..."
            tagName="h4"
          >
            <h4
              className="heading4AudioNumberLabel figureLabel  cypress-editable"
              contentEditable="true"
              id="cypress-4-0"
              onBlur={[Function]}
              onFocus={[Function]}
              placeholder="Enter Label..."
              suppressContentEditableWarning={true}
            >
              12345
            </h4>
          </TinyMceEditor>
          <TinyMceEditor
            className="heading4AudioTitle figureTitle"
            error={null}
            index="4-1"
            model="eresrwqe"
            onClick={[Function]}
            onKeyup={[Function]}
            placeholder="Enter Title..."
            tagName="h4"
          >
            <h4
              className="heading4AudioTitle figureTitle cypress-editable"
              contentEditable="true"
              id="cypress-4-1"
              onBlur={[Function]}
              onFocus={[Function]}
              placeholder="Enter Title..."
              suppressContentEditableWarning={true}
            >
              eresrwqe
            </h4>
          </TinyMceEditor>
        </header>
        <div
          className="assetDiv"
        >
          <strong>
            Asset: 
          </strong>
          https://cite-media-stg.pearson.com/legacy_paths/5e7f87f1-4662-4093-bb10-f3e1ef66e658/smart_figure_3_6_mc_war_part_b_1025689155684_mp4_video_320x240_168000_primary_audio_1.mp4
        </div>
        <div
          className="pearson-component audio"
          data-type="audio"
        >
          <audio
            className="audio"
            controls="none"
            preload="none"
          >
            <source
              src=""
              type="audio/mpeg"
            />
          </audio>
        </div>
        <figcaption
          className="figcaptionAudio"
        >
          <TinyMceEditor
            className="figureCaption"
            error={null}
            index="4-2"
            model="sdafsad"
            onClick={[Function]}
            onKeyup={[Function]}
            placeholder="Enter Caption..."
            tagName="p"
          >
            <p
              className="figureCaption cypress-editable"
              contentEditable="true"
              id="cypress-4-2"
              onBlur={[Function]}
              onFocus={[Function]}
              placeholder="Enter Caption..."
              suppressContentEditableWarning={true}
            >
              sdafsad
            </p>
          </TinyMceEditor>
        </figcaption>
      </figure>
      <div>
        <TinyMceEditor
          className="paragraphAudioCredit figureCredit"
          error={null}
          index="4-3"
          model="asdfasdfasdf"
          onClick={[Function]}
          onKeyup={[Function]}
          placeholder="Enter Credit..."
          tagName="p"
        >
          <p
            className="paragraphAudioCredit figureCredit cypress-editable"
            contentEditable="true"
            id="cypress-4-3"
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="Enter Credit..."
            suppressContentEditableWarning={true}
          >
            asdfasdfasdf
          </p>
        </TinyMceEditor>
      </div>
    </div>
  </div>
</ElementAudioVideo>
`;

exports[`Testing Element Audio-Video component With Audio element renders  properly with given audio SL-type  element 1`] = `
<ElementAudioVideo
  index={2}
  model={
    Object {
      "alignment": "full",
      "captions": Object {
        "footnotes": Array [],
        "mathml": Array [],
        "schema": "http://schemas.pearson.com/wip-authoring/authoredtext/1#/definitions/authoredtext",
        "text": "sdsd",
        "textsemantics": Array [],
      },
      "comments": true,
      "contentUrn": "urn:pearson:entity:b8c31acf-2c66-4a05-92ac-e0d910ec2720",
      "credits": Object {
        "footnotes": Array [],
        "mathml": Array [],
        "schema": "http://schemas.pearson.com/wip-authoring/authoredtext/1#/definitions/authoredtext",
        "text": "sdsd",
        "textsemantics": Array [],
      },
      "figuredata": Object {
        "audio": Object {
          "format": "video/mp4",
          "path": "https://cite-media-stg.pearson.com/legacy_paths/5e7f87f1-4662-4093-bb10-f3e1ef66e658/smart_figure_3_6_mc_war_part_b_1025689155684_mp4_video_320x240_168000_primary_audio_1.mp4",
        },
        "audioid": "urn:pearson:alfresco:5e7f87f1-4662-4093-bb10-f3e1ef66e658",
        "height": "399",
        "posterimage": Object {
          "imageid": "urn:pearson:alfresco:5e7f87f1-4662-4093-bb10-f3e1ef66e658",
          "path": "https://cite-media-stg.pearson.com/legacy_paths/af7f2e5c-1b0c-4943-a0e6-bd5e63d52115/FPO-audio_video.png",
        },
        "schema": "http://schemas.pearson.com/wip-authoring/audio/1#/definitions/audio",
        "srctype": "externallink",
        "width": "600",
      },
      "figuretype": "audio",
      "html": Object {
        "caption": "sdafsad",
        "credit": "asdfasdfasdf",
        "postertext": "",
        "schema": "http://schemas.pearson.com/wip-authoring/authoredtext/1#/definitions/authoredtext",
        "subtitle": "eresrwqe",
        "tableasHTML": "",
        "title": "12345",
      },
      "id": "urn:pearson:work:f20316ad-0a22-4f45-975d-ebe4ba1f2564",
      "schema": "http://schemas.pearson.com/wip-authoring/figure/1",
      "subtitle": Object {
        "footnotes": Array [],
        "mathml": Array [],
        "schema": "http://schemas.pearson.com/wip-authoring/authoredtext/1#/definitions/authoredtext",
        "text": "gfh",
        "textsemantics": Array [],
      },
      "subtype": "figureAudioSL",
      "tcm": true,
      "title": Object {
        "mathml": Array [],
        "schema": "http://schemas.pearson.com/wip-authoring/authoredtext/1#/definitions/authoredtext",
        "text": "sfd",
        "textsemantics": Array [],
      },
      "type": "figure",
      "versionUrn": "urn:pearson:work:f20316ad-0a22-4f45-975d-ebe4ba1f2564",
    }
  }
>
  <div
    className="figureElement"
  >
    <div
      className="divAudio"
    >
      <figure
        className="figureAudio"
      >
        <header
          className="figureHeader"
        >
          <TinyMceEditor
            className="heading4AudioNumberLabel figureLabel "
            error={null}
            index="2-0"
            model="12345"
            onClick={[Function]}
            onKeyup={[Function]}
            placeholder="Enter Label..."
            tagName="h4"
          >
            <h4
              className="heading4AudioNumberLabel figureLabel  cypress-editable"
              contentEditable="true"
              id="cypress-2-0"
              onBlur={[Function]}
              onFocus={[Function]}
              placeholder="Enter Label..."
              suppressContentEditableWarning={true}
            >
              12345
            </h4>
          </TinyMceEditor>
          <TinyMceEditor
            className="heading4AudioTitle figureTitle"
            error={null}
            index="2-1"
            model="eresrwqe"
            onClick={[Function]}
            onKeyup={[Function]}
            placeholder="Enter Title..."
            tagName="h4"
          >
            <h4
              className="heading4AudioTitle figureTitle cypress-editable"
              contentEditable="true"
              id="cypress-2-1"
              onBlur={[Function]}
              onFocus={[Function]}
              placeholder="Enter Title..."
              suppressContentEditableWarning={true}
            >
              eresrwqe
            </h4>
          </TinyMceEditor>
        </header>
        <div
          className="assetDiv"
        >
          <strong>
            Asset: 
          </strong>
          https://cite-media-stg.pearson.com/legacy_paths/5e7f87f1-4662-4093-bb10-f3e1ef66e658/smart_figure_3_6_mc_war_part_b_1025689155684_mp4_video_320x240_168000_primary_audio_1.mp4
        </div>
        <div
          className="pearson-component audio"
          data-type="audio"
        >
          <audio
            className="audio"
            controls="none"
            preload="none"
          >
            <source
              src=""
              type="audio/mpeg"
            />
          </audio>
        </div>
        <figcaption
          className="figcaptionAudio"
        >
          <TinyMceEditor
            className="figureCaption"
            error={null}
            index="2-2"
            model="sdafsad"
            onClick={[Function]}
            onKeyup={[Function]}
            placeholder="Enter Caption..."
            tagName="p"
          >
            <p
              className="figureCaption cypress-editable"
              contentEditable="true"
              id="cypress-2-2"
              onBlur={[Function]}
              onFocus={[Function]}
              placeholder="Enter Caption..."
              suppressContentEditableWarning={true}
            >
              sdafsad
            </p>
          </TinyMceEditor>
        </figcaption>
      </figure>
      <div>
        <TinyMceEditor
          className="paragraphAudioCredit figureCredit"
          error={null}
          index="2-3"
          model="asdfasdfasdf"
          onClick={[Function]}
          onKeyup={[Function]}
          placeholder="Enter Credit..."
          tagName="p"
        >
          <p
            className="paragraphAudioCredit figureCredit cypress-editable"
            contentEditable="true"
            id="cypress-2-3"
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="Enter Credit..."
            suppressContentEditableWarning={true}
          >
            asdfasdfasdf
          </p>
        </TinyMceEditor>
      </div>
    </div>
  </div>
</ElementAudioVideo>
`;

exports[`Testing Element Audio-Video component With Audio element renders properly with default audio SL-type element 1`] = `
<ElementAudioVideo
  index={1}
  model={
    Object {
      "alignment": "full",
      "captions": Object {
        "footnotes": Array [],
        "mathml": Array [],
        "schema": "http://schemas.pearson.com/wip-authoring/authoredtext/1#/definitions/authoredtext",
        "text": "sdsd",
        "textsemantics": Array [],
      },
      "comments": true,
      "contentUrn": "urn:pearson:entity:b8c31acf-2c66-4a05-92ac-e0d910ec2720",
      "credits": Object {
        "footnotes": Array [],
        "mathml": Array [],
        "schema": "http://schemas.pearson.com/wip-authoring/authoredtext/1#/definitions/authoredtext",
        "text": "sdsd",
        "textsemantics": Array [],
      },
      "figuredata": Object {
        "audio": Object {
          "format": "video/mp4",
          "path": "",
        },
        "audioid": "urn:pearson:alfresco:5e7f87f1-4662-4093-bb10-f3e1ef66e658",
        "height": "399",
        "posterimage": Object {
          "imageid": "urn:pearson:alfresco:5e7f87f1-4662-4093-bb10-f3e1ef66e658",
          "path": "https://cite-media-stg.pearson.com/legacy_paths/af7f2e5c-1b0c-4943-a0e6-bd5e63d52115/FPO-audio_video.png",
        },
        "schema": "http://schemas.pearson.com/wip-authoring/audio/1#/definitions/audio",
        "srctype": "externallink",
        "width": "600",
      },
      "figuretype": "audio",
      "html": Object {
        "caption": "sdafsad",
        "credit": "asdfasdfasdf",
        "postertext": "",
        "schema": "http://schemas.pearson.com/wip-authoring/authoredtext/1#/definitions/authoredtext",
        "subtitle": "eresrwqe",
        "tableasHTML": "",
        "title": "12345",
      },
      "id": "urn:pearson:work:f20316ad-0a22-4f45-975d-ebe4ba1f2564",
      "schema": "http://schemas.pearson.com/wip-authoring/figure/1",
      "subtitle": Object {
        "footnotes": Array [],
        "mathml": Array [],
        "schema": "http://schemas.pearson.com/wip-authoring/authoredtext/1#/definitions/authoredtext",
        "text": "gfh",
        "textsemantics": Array [],
      },
      "subtype": "figureAudioSL",
      "tcm": true,
      "title": Object {
        "mathml": Array [],
        "schema": "http://schemas.pearson.com/wip-authoring/authoredtext/1#/definitions/authoredtext",
        "text": "sfd",
        "textsemantics": Array [],
      },
      "type": "figure",
      "versionUrn": "urn:pearson:work:f20316ad-0a22-4f45-975d-ebe4ba1f2564",
    }
  }
>
  <div
    className="figureElement"
  >
    <div
      className="divAudio"
    >
      <figure
        className="figureAudio"
      >
        <header
          className="figureHeader"
        >
          <TinyMceEditor
            className="heading4AudioNumberLabel figureLabel "
            error={null}
            index="1-0"
            model="12345"
            onClick={[Function]}
            onKeyup={[Function]}
            placeholder="Enter Label..."
            tagName="h4"
          >
            <h4
              className="heading4AudioNumberLabel figureLabel  cypress-editable"
              contentEditable="true"
              id="cypress-1-0"
              onBlur={[Function]}
              onFocus={[Function]}
              placeholder="Enter Label..."
              suppressContentEditableWarning={true}
            >
              12345
            </h4>
          </TinyMceEditor>
          <TinyMceEditor
            className="heading4AudioTitle figureTitle"
            error={null}
            index="1-1"
            model="eresrwqe"
            onClick={[Function]}
            onKeyup={[Function]}
            placeholder="Enter Title..."
            tagName="h4"
          >
            <h4
              className="heading4AudioTitle figureTitle cypress-editable"
              contentEditable="true"
              id="cypress-1-1"
              onBlur={[Function]}
              onFocus={[Function]}
              placeholder="Enter Title..."
              suppressContentEditableWarning={true}
            >
              eresrwqe
            </h4>
          </TinyMceEditor>
        </header>
        <div
          className="assetDiv"
        >
          <strong>
            Asset: 
          </strong>
          Asset data undefined
        </div>
        <div
          className="pearson-component audio"
          data-type="audio"
        >
          <audio
            className="audio"
            controls="none"
            preload="none"
          >
            <source
              src=""
              type="audio/mpeg"
            />
          </audio>
        </div>
        <figcaption
          className="figcaptionAudio"
        >
          <TinyMceEditor
            className="figureCaption"
            error={null}
            index="1-2"
            model="sdafsad"
            onClick={[Function]}
            onKeyup={[Function]}
            placeholder="Enter Caption..."
            tagName="p"
          >
            <p
              className="figureCaption cypress-editable"
              contentEditable="true"
              id="cypress-1-2"
              onBlur={[Function]}
              onFocus={[Function]}
              placeholder="Enter Caption..."
              suppressContentEditableWarning={true}
            >
              sdafsad
            </p>
          </TinyMceEditor>
        </figcaption>
      </figure>
      <div>
        <TinyMceEditor
          className="paragraphAudioCredit figureCredit"
          error={null}
          index="1-3"
          model="asdfasdfasdf"
          onClick={[Function]}
          onKeyup={[Function]}
          placeholder="Enter Credit..."
          tagName="p"
        >
          <p
            className="paragraphAudioCredit figureCredit cypress-editable"
            contentEditable="true"
            id="cypress-1-3"
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="Enter Credit..."
            suppressContentEditableWarning={true}
          >
            asdfasdfasdf
          </p>
        </TinyMceEditor>
      </div>
    </div>
  </div>
</ElementAudioVideo>
`;

exports[`Testing Element Audio-Video component With Video element renders  properly with default video Alfresco-type element 1`] = `
<ElementAudioVideo
  index={7}
  model={
    Object {
      "alignment": "full",
      "captions": Object {
        "footnotes": Array [],
        "mathml": Array [],
        "schema": "http://schemas.pearson.com/wip-authoring/authoredtext/1#/definitions/authoredtext",
        "text": "sdafsad",
        "textsemantics": Array [],
      },
      "comments": true,
      "contentUrn": "urn:pearson:entity:853c3a70-01e4-41e3-b3d7-ee2d157b0d89",
      "credits": Object {
        "footnotes": Array [],
        "mathml": Array [],
        "schema": "http://schemas.pearson.com/wip-authoring/authoredtext/1#/definitions/authoredtext",
        "text": "asdfasdfasdf",
        "textsemantics": Array [],
      },
      "figuredata": Object {
        "clipinfo": Object {
          "clipid": "",
          "description": "",
          "duration": "",
          "endtime": "",
          "starttime": "",
        },
        "height": "399",
        "posterimage": Object {
          "imageid": "urn:pearson:alfresco:f6269c36-bff5-46e0-ba2f-de9f4f172002",
          "path": "https://cite-media-stg.pearson.com/legacy_paths/af7f2e5c-1b0c-4943-a0e6-bd5e63d52115/FPO-audio_video.png",
        },
        "schema": "http://schemas.pearson.com/wip-authoring/video/1#/definitions/video",
        "srctype": "externallink",
        "tracks": Array [],
        "videoid": "urn:pearson:alfresco:f6269c36-bff5-46e0-ba2f-de9f4f172002",
        "videos": Array [
          Object {
            "format": "audio/mpeg",
            "path": "",
          },
        ],
        "width": "600",
      },
      "figuretype": "video",
      "html": Object {
        "caption": "sdafsad",
        "credit": "asdfasdfasdf",
        "postertext": "",
        "schema": "http://schemas.pearson.com/wip-authoring/authoredtext/1#/definitions/authoredtext",
        "subtitle": "eresrwqe",
        "tableasHTML": "",
        "title": "12345",
      },
      "id": "urn:pearson:work:fa7bcbce-1cc5-467e-be1d-66cc513ec464",
      "schema": "http://schemas.pearson.com/wip-authoring/figure/1",
      "subtitle": Object {
        "footnotes": Array [],
        "mathml": Array [],
        "schema": "http://schemas.pearson.com/wip-authoring/authoredtext/1#/definitions/authoredtext",
        "text": "eresrwqe",
        "textsemantics": Array [],
      },
      "subtype": "figureVideo",
      "tcm": true,
      "title": Object {
        "mathml": Array [],
        "schema": "http://schemas.pearson.com/wip-authoring/authoredtext/1#/definitions/authoredtext",
        "text": "12345",
        "textsemantics": Array [],
      },
      "type": "figure",
      "versionUrn": "urn:pearson:work:c04d373e-4534-412f-bb75-dfb8d32577f5",
    }
  }
>
  <div
    className="figureElement"
  >
    <div
      className="divVideo"
    >
      <figure
        className="figureVideo"
      >
        <header
          className="figureHeader"
        >
          <TinyMceEditor
            className="heading4VideoNumberLabel figureLabel "
            error={null}
            index="7-0"
            model="12345"
            onClick={[Function]}
            onKeyup={[Function]}
            placeholder="Enter Label..."
            tagName="h4"
          >
            <h4
              className="heading4VideoNumberLabel figureLabel  cypress-editable"
              contentEditable="true"
              id="cypress-7-0"
              onBlur={[Function]}
              onFocus={[Function]}
              placeholder="Enter Label..."
              suppressContentEditableWarning={true}
            >
              12345
            </h4>
          </TinyMceEditor>
          <TinyMceEditor
            className="heading4VideoTitle figureTitle"
            error={null}
            index="7-1"
            model="eresrwqe"
            onClick={[Function]}
            onKeyup={[Function]}
            placeholder="Enter Title..."
            tagName="h4"
          >
            <h4
              className="heading4VideoTitle figureTitle cypress-editable"
              contentEditable="true"
              id="cypress-7-1"
              onBlur={[Function]}
              onFocus={[Function]}
              placeholder="Enter Title..."
              suppressContentEditableWarning={true}
            >
              eresrwqe
            </h4>
          </TinyMceEditor>
        </header>
        <div
          className="assetDiv"
        >
          <strong>
            Asset: 
          </strong>
          Asset data undefined
        </div>
        <div
          className="pearson-component video"
          data-type="video"
        >
          <video
            className="video"
            controls="none"
            height="360"
            poster="https://cite-media-stg.pearson.com/legacy_paths/af7f2e5c-1b0c-4943-a0e6-bd5e63d52115/FPO-audio_video.png"
            preload="none"
            width="640"
          >
            <source
              src=""
            />
            <track
              kind="subtitles"
              label="English"
              src=""
              srcLang="en"
            />
          </video>
        </div>
        <figcaption
          className="figcaptionVideo"
        >
          <TinyMceEditor
            className="figureCaption"
            error={null}
            index="7-2"
            model="sdafsad"
            onClick={[Function]}
            onKeyup={[Function]}
            placeholder="Enter Caption..."
            tagName="p"
          >
            <p
              className="figureCaption cypress-editable"
              contentEditable="true"
              id="cypress-7-2"
              onBlur={[Function]}
              onFocus={[Function]}
              placeholder="Enter Caption..."
              suppressContentEditableWarning={true}
            >
              sdafsad
            </p>
          </TinyMceEditor>
        </figcaption>
      </figure>
      <div>
        <TinyMceEditor
          className="paragraphVideoCredit figureCredit"
          error={null}
          index="7-3"
          model="asdfasdfasdf"
          onClick={[Function]}
          onKeyup={[Function]}
          placeholder="Enter Credit..."
          tagName="p"
        >
          <p
            className="paragraphVideoCredit figureCredit cypress-editable"
            contentEditable="true"
            id="cypress-7-3"
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="Enter Credit..."
            suppressContentEditableWarning={true}
          >
            asdfasdfasdf
          </p>
        </TinyMceEditor>
      </div>
    </div>
  </div>
</ElementAudioVideo>
`;

exports[`Testing Element Audio-Video component With Video element renders  properly with given video Alfresco-type element 1`] = `
<ElementAudioVideo
  index={8}
  model={
    Object {
      "alignment": "full",
      "captions": Object {
        "footnotes": Array [],
        "mathml": Array [],
        "schema": "http://schemas.pearson.com/wip-authoring/authoredtext/1#/definitions/authoredtext",
        "text": "sdafsad",
        "textsemantics": Array [],
      },
      "comments": true,
      "contentUrn": "urn:pearson:entity:853c3a70-01e4-41e3-b3d7-ee2d157b0d89",
      "credits": Object {
        "footnotes": Array [],
        "mathml": Array [],
        "schema": "http://schemas.pearson.com/wip-authoring/authoredtext/1#/definitions/authoredtext",
        "text": "asdfasdfasdf",
        "textsemantics": Array [],
      },
      "figuredata": Object {
        "clipinfo": Object {
          "clipid": "",
          "description": "",
          "duration": "",
          "endtime": "",
          "starttime": "",
        },
        "height": "399",
        "posterimage": Object {
          "imageid": "urn:pearson:alfresco:f6269c36-bff5-46e0-ba2f-de9f4f172002",
          "path": "https://cite-media-stg.pearson.com/legacy_paths/af7f2e5c-1b0c-4943-a0e6-bd5e63d52115/FPO-audio_video.png",
        },
        "schema": "http://schemas.pearson.com/wip-authoring/video/1#/definitions/video",
        "srctype": "externallink",
        "tracks": Array [],
        "videoid": "urn:pearson:alfresco:f6269c36-bff5-46e0-ba2f-de9f4f172002",
        "videos": Array [
          Object {
            "format": "audio/mpeg",
            "path": "https://cite-media-stg.pearson.com/legacy_paths/42333091-7625-4317-b095-1f450207961f/dipe.mp4",
          },
        ],
        "width": "600",
      },
      "figuretype": "video",
      "html": Object {
        "caption": "sdafsad",
        "credit": "asdfasdfasdf",
        "postertext": "",
        "schema": "http://schemas.pearson.com/wip-authoring/authoredtext/1#/definitions/authoredtext",
        "subtitle": "eresrwqe",
        "tableasHTML": "",
        "title": "12345",
      },
      "id": "urn:pearson:work:fa7bcbce-1cc5-467e-be1d-66cc513ec464",
      "schema": "http://schemas.pearson.com/wip-authoring/figure/1",
      "subtitle": Object {
        "footnotes": Array [],
        "mathml": Array [],
        "schema": "http://schemas.pearson.com/wip-authoring/authoredtext/1#/definitions/authoredtext",
        "text": "eresrwqe",
        "textsemantics": Array [],
      },
      "subtype": "figureVideo",
      "tcm": true,
      "title": Object {
        "mathml": Array [],
        "schema": "http://schemas.pearson.com/wip-authoring/authoredtext/1#/definitions/authoredtext",
        "text": "12345",
        "textsemantics": Array [],
      },
      "type": "figure",
      "versionUrn": "urn:pearson:work:c04d373e-4534-412f-bb75-dfb8d32577f5",
    }
  }
>
  <div
    className="figureElement"
  >
    <div
      className="divVideo"
    >
      <figure
        className="figureVideo"
      >
        <header
          className="figureHeader"
        >
          <TinyMceEditor
            className="heading4VideoNumberLabel figureLabel "
            error={null}
            index="8-0"
            model="12345"
            onClick={[Function]}
            onKeyup={[Function]}
            placeholder="Enter Label..."
            tagName="h4"
          >
            <h4
              className="heading4VideoNumberLabel figureLabel  cypress-editable"
              contentEditable="true"
              id="cypress-8-0"
              onBlur={[Function]}
              onFocus={[Function]}
              placeholder="Enter Label..."
              suppressContentEditableWarning={true}
            >
              12345
            </h4>
          </TinyMceEditor>
          <TinyMceEditor
            className="heading4VideoTitle figureTitle"
            error={null}
            index="8-1"
            model="eresrwqe"
            onClick={[Function]}
            onKeyup={[Function]}
            placeholder="Enter Title..."
            tagName="h4"
          >
            <h4
              className="heading4VideoTitle figureTitle cypress-editable"
              contentEditable="true"
              id="cypress-8-1"
              onBlur={[Function]}
              onFocus={[Function]}
              placeholder="Enter Title..."
              suppressContentEditableWarning={true}
            >
              eresrwqe
            </h4>
          </TinyMceEditor>
        </header>
        <div
          className="assetDiv"
        >
          <strong>
            Asset: 
          </strong>
          https://cite-media-stg.pearson.com/legacy_paths/42333091-7625-4317-b095-1f450207961f/dipe.mp4
        </div>
        <div
          className="pearson-component video"
          data-type="video"
        >
          <video
            className="video"
            controls="none"
            height="360"
            poster="https://cite-media-stg.pearson.com/legacy_paths/af7f2e5c-1b0c-4943-a0e6-bd5e63d52115/FPO-audio_video.png"
            preload="none"
            width="640"
          >
            <source
              src=""
            />
            <track
              kind="subtitles"
              label="English"
              src=""
              srcLang="en"
            />
          </video>
        </div>
        <figcaption
          className="figcaptionVideo"
        >
          <TinyMceEditor
            className="figureCaption"
            error={null}
            index="8-2"
            model="sdafsad"
            onClick={[Function]}
            onKeyup={[Function]}
            placeholder="Enter Caption..."
            tagName="p"
          >
            <p
              className="figureCaption cypress-editable"
              contentEditable="true"
              id="cypress-8-2"
              onBlur={[Function]}
              onFocus={[Function]}
              placeholder="Enter Caption..."
              suppressContentEditableWarning={true}
            >
              sdafsad
            </p>
          </TinyMceEditor>
        </figcaption>
      </figure>
      <div>
        <TinyMceEditor
          className="paragraphVideoCredit figureCredit"
          error={null}
          index="8-3"
          model="asdfasdfasdf"
          onClick={[Function]}
          onKeyup={[Function]}
          placeholder="Enter Credit..."
          tagName="p"
        >
          <p
            className="paragraphVideoCredit figureCredit cypress-editable"
            contentEditable="true"
            id="cypress-8-3"
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="Enter Credit..."
            suppressContentEditableWarning={true}
          >
            asdfasdfasdf
          </p>
        </TinyMceEditor>
      </div>
    </div>
  </div>
</ElementAudioVideo>
`;

exports[`Testing Element Audio-Video component With Video element renders  properly with given video SL-type element 1`] = `
<ElementAudioVideo
  index={6}
  model={
    Object {
      "alignment": "full",
      "captions": Object {
        "footnotes": Array [],
        "mathml": Array [],
        "schema": "http://schemas.pearson.com/wip-authoring/authoredtext/1#/definitions/authoredtext",
        "text": "sdafsad",
        "textsemantics": Array [],
      },
      "comments": true,
      "contentUrn": "urn:pearson:entity:853c3a70-01e4-41e3-b3d7-ee2d157b0d89",
      "credits": Object {
        "footnotes": Array [],
        "mathml": Array [],
        "schema": "http://schemas.pearson.com/wip-authoring/authoredtext/1#/definitions/authoredtext",
        "text": "asdfasdfasdf",
        "textsemantics": Array [],
      },
      "figuredata": Object {
        "clipinfo": Object {
          "clipid": "",
          "description": "",
          "duration": "",
          "endtime": "",
          "starttime": "",
        },
        "height": "399",
        "posterimage": Object {
          "imageid": "urn:pearson:alfresco:f6269c36-bff5-46e0-ba2f-de9f4f172002",
          "path": "https://cite-media-stg.pearson.com/legacy_paths/af7f2e5c-1b0c-4943-a0e6-bd5e63d52115/FPO-audio_video.png",
        },
        "schema": "http://schemas.pearson.com/wip-authoring/video/1#/definitions/video",
        "srctype": "externallink",
        "tracks": Array [],
        "videoid": "urn:pearson:alfresco:f6269c36-bff5-46e0-ba2f-de9f4f172002",
        "videos": Array [
          Object {
            "format": "audio/mpeg",
            "path": "https://cite-media-stg.pearson.com/legacy_paths/42333091-7625-4317-b095-1f450207961f/dipe.mp4",
          },
        ],
        "width": "600",
      },
      "figuretype": "video",
      "html": Object {
        "caption": "sdafsad",
        "credit": "asdfasdfasdf",
        "postertext": "",
        "schema": "http://schemas.pearson.com/wip-authoring/authoredtext/1#/definitions/authoredtext",
        "subtitle": "eresrwqe",
        "tableasHTML": "",
        "title": "12345",
      },
      "id": "urn:pearson:work:fa7bcbce-1cc5-467e-be1d-66cc513ec464",
      "schema": "http://schemas.pearson.com/wip-authoring/figure/1",
      "subtitle": Object {
        "footnotes": Array [],
        "mathml": Array [],
        "schema": "http://schemas.pearson.com/wip-authoring/authoredtext/1#/definitions/authoredtext",
        "text": "eresrwqe",
        "textsemantics": Array [],
      },
      "subtype": "figureVideo",
      "tcm": true,
      "title": Object {
        "mathml": Array [],
        "schema": "http://schemas.pearson.com/wip-authoring/authoredtext/1#/definitions/authoredtext",
        "text": "12345",
        "textsemantics": Array [],
      },
      "type": "figure",
      "versionUrn": "urn:pearson:work:c04d373e-4534-412f-bb75-dfb8d32577f5",
    }
  }
>
  <div
    className="figureElement"
  >
    <div
      className="divVideo"
    >
      <figure
        className="figureVideo"
      >
        <header
          className="figureHeader"
        >
          <TinyMceEditor
            className="heading4VideoNumberLabel figureLabel "
            error={null}
            index="6-0"
            model="12345"
            onClick={[Function]}
            onKeyup={[Function]}
            placeholder="Enter Label..."
            tagName="h4"
          >
            <h4
              className="heading4VideoNumberLabel figureLabel  cypress-editable"
              contentEditable="true"
              id="cypress-6-0"
              onBlur={[Function]}
              onFocus={[Function]}
              placeholder="Enter Label..."
              suppressContentEditableWarning={true}
            >
              12345
            </h4>
          </TinyMceEditor>
          <TinyMceEditor
            className="heading4VideoTitle figureTitle"
            error={null}
            index="6-1"
            model="eresrwqe"
            onClick={[Function]}
            onKeyup={[Function]}
            placeholder="Enter Title..."
            tagName="h4"
          >
            <h4
              className="heading4VideoTitle figureTitle cypress-editable"
              contentEditable="true"
              id="cypress-6-1"
              onBlur={[Function]}
              onFocus={[Function]}
              placeholder="Enter Title..."
              suppressContentEditableWarning={true}
            >
              eresrwqe
            </h4>
          </TinyMceEditor>
        </header>
        <div
          className="assetDiv"
        >
          <strong>
            Asset: 
          </strong>
          https://cite-media-stg.pearson.com/legacy_paths/42333091-7625-4317-b095-1f450207961f/dipe.mp4
        </div>
        <div
          className="pearson-component video"
          data-type="video"
        >
          <video
            className="video"
            controls="none"
            height="360"
            poster="https://cite-media-stg.pearson.com/legacy_paths/af7f2e5c-1b0c-4943-a0e6-bd5e63d52115/FPO-audio_video.png"
            preload="none"
            width="640"
          >
            <source
              src=""
            />
            <track
              kind="subtitles"
              label="English"
              src=""
              srcLang="en"
            />
          </video>
        </div>
        <figcaption
          className="figcaptionVideo"
        >
          <TinyMceEditor
            className="figureCaption"
            error={null}
            index="6-2"
            model="sdafsad"
            onClick={[Function]}
            onKeyup={[Function]}
            placeholder="Enter Caption..."
            tagName="p"
          >
            <p
              className="figureCaption cypress-editable"
              contentEditable="true"
              id="cypress-6-2"
              onBlur={[Function]}
              onFocus={[Function]}
              placeholder="Enter Caption..."
              suppressContentEditableWarning={true}
            >
              sdafsad
            </p>
          </TinyMceEditor>
        </figcaption>
      </figure>
      <div>
        <TinyMceEditor
          className="paragraphVideoCredit figureCredit"
          error={null}
          index="6-3"
          model="asdfasdfasdf"
          onClick={[Function]}
          onKeyup={[Function]}
          placeholder="Enter Credit..."
          tagName="p"
        >
          <p
            className="paragraphVideoCredit figureCredit cypress-editable"
            contentEditable="true"
            id="cypress-6-3"
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="Enter Credit..."
            suppressContentEditableWarning={true}
          >
            asdfasdfasdf
          </p>
        </TinyMceEditor>
      </div>
    </div>
  </div>
</ElementAudioVideo>
`;

exports[`Testing Element Audio-Video component With Video element renders properly with default video SL-type element 1`] = `
<ElementAudioVideo
  index={5}
  model={
    Object {
      "alignment": "full",
      "captions": Object {
        "footnotes": Array [],
        "mathml": Array [],
        "schema": "http://schemas.pearson.com/wip-authoring/authoredtext/1#/definitions/authoredtext",
        "text": "sdafsad",
        "textsemantics": Array [],
      },
      "comments": true,
      "contentUrn": "urn:pearson:entity:853c3a70-01e4-41e3-b3d7-ee2d157b0d89",
      "credits": Object {
        "footnotes": Array [],
        "mathml": Array [],
        "schema": "http://schemas.pearson.com/wip-authoring/authoredtext/1#/definitions/authoredtext",
        "text": "asdfasdfasdf",
        "textsemantics": Array [],
      },
      "figuredata": Object {
        "clipinfo": Object {
          "clipid": "",
          "description": "",
          "duration": "",
          "endtime": "",
          "starttime": "",
        },
        "height": "399",
        "posterimage": Object {
          "imageid": "urn:pearson:alfresco:f6269c36-bff5-46e0-ba2f-de9f4f172002",
          "path": "https://cite-media-stg.pearson.com/legacy_paths/af7f2e5c-1b0c-4943-a0e6-bd5e63d52115/FPO-audio_video.png",
        },
        "schema": "http://schemas.pearson.com/wip-authoring/video/1#/definitions/video",
        "srctype": "externallink",
        "tracks": Array [],
        "videoid": "urn:pearson:alfresco:f6269c36-bff5-46e0-ba2f-de9f4f172002",
        "videos": Array [
          Object {
            "format": "audio/mpeg",
            "path": "",
          },
        ],
        "width": "600",
      },
      "figuretype": "video",
      "html": Object {
        "caption": "sdafsad",
        "credit": "asdfasdfasdf",
        "postertext": "",
        "schema": "http://schemas.pearson.com/wip-authoring/authoredtext/1#/definitions/authoredtext",
        "subtitle": "eresrwqe",
        "tableasHTML": "",
        "title": "12345",
      },
      "id": "urn:pearson:work:fa7bcbce-1cc5-467e-be1d-66cc513ec464",
      "schema": "http://schemas.pearson.com/wip-authoring/figure/1",
      "subtitle": Object {
        "footnotes": Array [],
        "mathml": Array [],
        "schema": "http://schemas.pearson.com/wip-authoring/authoredtext/1#/definitions/authoredtext",
        "text": "eresrwqe",
        "textsemantics": Array [],
      },
      "subtype": "figureVideo",
      "tcm": true,
      "title": Object {
        "mathml": Array [],
        "schema": "http://schemas.pearson.com/wip-authoring/authoredtext/1#/definitions/authoredtext",
        "text": "12345",
        "textsemantics": Array [],
      },
      "type": "figure",
      "versionUrn": "urn:pearson:work:c04d373e-4534-412f-bb75-dfb8d32577f5",
    }
  }
>
  <div
    className="figureElement"
  >
    <div
      className="divVideo"
    >
      <figure
        className="figureVideo"
      >
        <header
          className="figureHeader"
        >
          <TinyMceEditor
            className="heading4VideoNumberLabel figureLabel "
            error={null}
            index="5-0"
            model="12345"
            onClick={[Function]}
            onKeyup={[Function]}
            placeholder="Enter Label..."
            tagName="h4"
          >
            <h4
              className="heading4VideoNumberLabel figureLabel  cypress-editable"
              contentEditable="true"
              id="cypress-5-0"
              onBlur={[Function]}
              onFocus={[Function]}
              placeholder="Enter Label..."
              suppressContentEditableWarning={true}
            >
              12345
            </h4>
          </TinyMceEditor>
          <TinyMceEditor
            className="heading4VideoTitle figureTitle"
            error={null}
            index="5-1"
            model="eresrwqe"
            onClick={[Function]}
            onKeyup={[Function]}
            placeholder="Enter Title..."
            tagName="h4"
          >
            <h4
              className="heading4VideoTitle figureTitle cypress-editable"
              contentEditable="true"
              id="cypress-5-1"
              onBlur={[Function]}
              onFocus={[Function]}
              placeholder="Enter Title..."
              suppressContentEditableWarning={true}
            >
              eresrwqe
            </h4>
          </TinyMceEditor>
        </header>
        <div
          className="assetDiv"
        >
          <strong>
            Asset: 
          </strong>
          Asset data undefined
        </div>
        <div
          className="pearson-component video"
          data-type="video"
        >
          <video
            className="video"
            controls="none"
            height="360"
            poster="https://cite-media-stg.pearson.com/legacy_paths/af7f2e5c-1b0c-4943-a0e6-bd5e63d52115/FPO-audio_video.png"
            preload="none"
            width="640"
          >
            <source
              src=""
            />
            <track
              kind="subtitles"
              label="English"
              src=""
              srcLang="en"
            />
          </video>
        </div>
        <figcaption
          className="figcaptionVideo"
        >
          <TinyMceEditor
            className="figureCaption"
            error={null}
            index="5-2"
            model="sdafsad"
            onClick={[Function]}
            onKeyup={[Function]}
            placeholder="Enter Caption..."
            tagName="p"
          >
            <p
              className="figureCaption cypress-editable"
              contentEditable="true"
              id="cypress-5-2"
              onBlur={[Function]}
              onFocus={[Function]}
              placeholder="Enter Caption..."
              suppressContentEditableWarning={true}
            >
              sdafsad
            </p>
          </TinyMceEditor>
        </figcaption>
      </figure>
      <div>
        <TinyMceEditor
          className="paragraphVideoCredit figureCredit"
          error={null}
          index="5-3"
          model="asdfasdfasdf"
          onClick={[Function]}
          onKeyup={[Function]}
          placeholder="Enter Credit..."
          tagName="p"
        >
          <p
            className="paragraphVideoCredit figureCredit cypress-editable"
            contentEditable="true"
            id="cypress-5-3"
            onBlur={[Function]}
            onFocus={[Function]}
            placeholder="Enter Credit..."
            suppressContentEditableWarning={true}
          >
            asdfasdfasdf
          </p>
        </TinyMceEditor>
      </div>
    </div>
  </div>
</ElementAudioVideo>
`;
